IAM cascade delete (#121)
* WIP cascade deletion

* add deleters for users and serviceaccounts

* add todos

* WIP deletion interface

* generate repositories

* add deleters

* hide salt from multipass listings, issue JWT for  user with their multipass

* codegen: snake case, not lowercase

* fix rolebinding approvals deltes, add todos

* fix indexing fields issues

* remove repo code generator

* remove snake_case

* re-generate openapi
