# vault-plugins/flant_iam/model/project.go
@@ -9,7 +9,6 @@ import (
 )
 
 const (
-	ProjectType      = "project" // also, memdb schema name
 	ProjectForeignPK = "project_uuid"
 )
 
@@ -51,6 +50,7 @@ func ProjectSchema() *memdb.DBSchema {
 	}
 }
 
+//go:generate go run gen_repository.go -type Project -parentType Tenant
 type Project struct {
 	UUID       ProjectUUID `json:"uuid"` // PK
 	TenantUUID TenantUUID  `json:"tenant_uuid"`
@@ -60,31 +60,33 @@ type Project struct {
 	FeatureFlags []FeatureFlag `json:"feature_flags"`
 }
 
-func (p *Project) ObjType() string {
+const ProjectType = "project" // also, memdb schema name
+
+func (u *Project) ObjType() string {
 	return ProjectType
 }
 
-func (p *Project) ObjId() string {
-	return p.UUID
+func (u *Project) ObjId() string {
+	return u.UUID
 }
 
 type ProjectRepository struct {
-	db         *io.MemoryStoreTxn // called "db" not to provoke transaction semantics
-	tenantRepo *TenantRepository
+	db *io.MemoryStoreTxn // called "db" not to provoke transaction semantics
 }
 
 func NewProjectRepository(tx *io.MemoryStoreTxn) *ProjectRepository {
-	return &ProjectRepository{
-		db:         tx,
-		tenantRepo: NewTenantRepository(tx),
-	}
+	return &ProjectRepository{db: tx}
 }
 
 func (r *ProjectRepository) save(project *Project) error {
 	return r.db.Insert(ProjectType, project)
 }
 
-func (r *ProjectRepository) GetByID(id ProjectUUID) (*Project, error) {
+func (r *ProjectRepository) Create(project *Project) error {
+	return r.save(project)
+}
+
+func (r *ProjectRepository) GetRawByID(id ProjectUUID) (interface{}, error) {
 	raw, err := r.db.First(ProjectType, PK, id)
 	if err != nil {
 		return nil, err
@@ -92,13 +94,15 @@ func (r *ProjectRepository) GetByID(id ProjectUUID) (*Project, error) {
 	if raw == nil {
 		return nil, ErrNotFound
 	}
-	project := raw.(*Project)
-
-	return project, nil
+	return raw, nil
 }
 
-func (r *ProjectRepository) Create(project *Project) error {
-	return r.save(project)
+func (r *ProjectRepository) GetByID(id ProjectUUID) (*Project, error) {
+	raw, err := r.GetRawByID(id)
+	if raw == nil {
+		return nil, err
+	}
+	return raw.(*Project), err
 }
 
 func (r *ProjectRepository) Update(project *Project) error {
@@ -106,21 +110,19 @@ func (r *ProjectRepository) Update(project *Project) error {
 	if err != nil {
 		return err
 	}
-
 	return r.save(project)
 }
 
-func (r *ProjectRepository) Delete(id string) error {
+func (r *ProjectRepository) Delete(id ProjectUUID) error {
 	project, err := r.GetByID(id)
 	if err != nil {
 		return err
 	}
-
 	return r.db.Delete(ProjectType, project)
 }
 
-func (r *ProjectRepository) List(tenantID TenantUUID) ([]*Project, error) {
-	iter, err := r.db.Get(ProjectType, TenantForeignPK, tenantID)
+func (r *ProjectRepository) List(tenantUUID TenantUUID) ([]*Project, error) {
+	iter, err := r.db.Get(ProjectType, TenantForeignPK, tenantUUID)
 	if err != nil {
 		return nil, err
 	}
@@ -131,10 +133,47 @@ func (r *ProjectRepository) List(tenantID TenantUUID) ([]*Project, error) {
 		if raw == nil {
 			break
 		}
-		project := raw.(*Project)
-		list = append(list, project)
+		obj := raw.(*Project)
+		list = append(list, obj)
 	}
 	return list, nil
+}
+
+func (r *ProjectRepository) ListIDs(tenantID TenantUUID) ([]ProjectUUID, error) {
+	objs, err := r.List(tenantID)
+	if err != nil {
+		return nil, err
+	}
+	ids := make([]ProjectUUID, len(objs))
+	for i := range objs {
+		ids[i] = objs[i].ObjId()
+	}
+	return ids, nil
+}
+
+func (r *ProjectRepository) Iter(action func(*Project) (bool, error)) error {
+	iter, err := r.db.Get(ProjectType, PK)
+	if err != nil {
+		return err
+	}
+
+	for {
+		raw := iter.Next()
+		if raw == nil {
+			break
+		}
+		obj := raw.(*Project)
+		next, err := action(obj)
+		if err != nil {
+			return err
+		}
+
+		if !next {
+			break
+		}
+	}
+
+	return nil
 }
 
 func (r *ProjectRepository) Sync(objID string, data []byte) error {
@@ -142,11 +181,11 @@ func (r *ProjectRepository) Sync(objID string, data []byte) error {
 		return r.Delete(objID)
 	}
 
-	pr := &Project{}
-	err := json.Unmarshal(data, pr)
+	project := &Project{}
+	err := json.Unmarshal(data, project)
 	if err != nil {
 		return err
 	}
 
-	return r.save(pr)
+	return r.save(project)
 }
