# vault-plugins/flant_iam/model/tenant.go
@@ -9,7 +9,6 @@ import (
 )
 
 const (
-	TenantType      = "tenant" // also, memdb schema name
 	TenantForeignPK = "tenant_uuid"
 )
 
@@ -46,6 +45,7 @@ func TenantSchema() *memdb.DBSchema {
 	}
 }
 
+//go:generate go run gen_repository.go -type Tenant
 type Tenant struct {
 	UUID       TenantUUID `json:"uuid"` // PK
 	Version    string     `json:"resource_version"`
@@ -54,12 +54,14 @@ type Tenant struct {
 	FeatureFlags []TenantFeatureFlag `json:"feature_flags"`
 }
 
-func (t *Tenant) ObjType() string {
+const TenantType = "tenant" // also, memdb schema name
+
+func (u *Tenant) ObjType() string {
 	return TenantType
 }
 
-func (t *Tenant) ObjId() string {
-	return t.UUID
+func (u *Tenant) ObjId() string {
+	return u.UUID
 }
 
 type TenantRepository struct {
@@ -67,20 +69,18 @@ type TenantRepository struct {
 }
 
 func NewTenantRepository(tx *io.MemoryStoreTxn) *TenantRepository {
-	return &TenantRepository{
-		db: tx,
-	}
+	return &TenantRepository{db: tx}
 }
 
-func (r *TenantRepository) save(t *Tenant) error {
-	return r.db.Insert(TenantType, t)
+func (r *TenantRepository) save(tenant *Tenant) error {
+	return r.db.Insert(TenantType, tenant)
 }
 
-func (r *TenantRepository) Create(t *Tenant) error {
-	return r.db.Insert(TenantType, t)
+func (r *TenantRepository) Create(tenant *Tenant) error {
+	return r.save(tenant)
 }
 
-func (r *TenantRepository) GetByID(id TenantUUID) (*Tenant, error) {
+func (r *TenantRepository) GetRawByID(id TenantUUID) (interface{}, error) {
 	raw, err := r.db.First(TenantType, PK, id)
 	if err != nil {
 		return nil, err
@@ -88,11 +88,23 @@ func (r *TenantRepository) GetByID(id TenantUUID) (*Tenant, error) {
 	if raw == nil {
 		return nil, ErrNotFound
 	}
-	return raw.(*Tenant), nil
+	return raw, nil
 }
 
-func (r *TenantRepository) Update(t *Tenant) error {
-	return r.save(t)
+func (r *TenantRepository) GetByID(id TenantUUID) (*Tenant, error) {
+	raw, err := r.GetRawByID(id)
+	if raw == nil {
+		return nil, err
+	}
+	return raw.(*Tenant), err
+}
+
+func (r *TenantRepository) Update(tenant *Tenant) error {
+	_, err := r.GetByID(tenant.UUID)
+	if err != nil {
+		return err
+	}
+	return r.save(tenant)
 }
 
 func (r *TenantRepository) Delete(id TenantUUID) error {
@@ -100,7 +112,6 @@ func (r *TenantRepository) Delete(id TenantUUID) error {
 	if err != nil {
 		return err
 	}
-
 	return r.db.Delete(TenantType, tenant)
 }
 
@@ -116,10 +127,47 @@ func (r *TenantRepository) List() ([]*Tenant, error) {
 		if raw == nil {
 			break
 		}
-		t := raw.(*Tenant)
-		list = append(list, t)
+		obj := raw.(*Tenant)
+		list = append(list, obj)
 	}
 	return list, nil
+}
+
+func (r *TenantRepository) ListIDs() ([]TenantUUID, error) {
+	objs, err := r.List()
+	if err != nil {
+		return nil, err
+	}
+	ids := make([]TenantUUID, len(objs))
+	for i := range objs {
+		ids[i] = objs[i].ObjId()
+	}
+	return ids, nil
+}
+
+func (r *TenantRepository) Iter(action func(*Tenant) (bool, error)) error {
+	iter, err := r.db.Get(TenantType, PK)
+	if err != nil {
+		return err
+	}
+
+	for {
+		raw := iter.Next()
+		if raw == nil {
+			break
+		}
+		obj := raw.(*Tenant)
+		next, err := action(obj)
+		if err != nil {
+			return err
+		}
+
+		if !next {
+			break
+		}
+	}
+
+	return nil
 }
 
 func (r *TenantRepository) Sync(objID string, data []byte) error {
